# go2

./: .env.example  .gitignore  .scalafmt.conf  Cargo.toml  Dockerfile  README.md  build.rs  build.sbt  docker-compose.yml  rustfmt.toml  sqlx-data.json  tailwind.config.js
.github/workflows/: ci.yml
.sqlx/: query-8452c138a98240ebe10882841d32e4369dceae5415ceca5b33b057532e218fd8.json  query-94a95173b0b2084c618ac9f9d059e4e236bd237f6470227dd7f8d93af004bff7.json  query-9cb00c8bc669cf86702d4a28388e2fe9512df0f80b4c3b2c28181a17d3f959b9.json  query-be75170ce3a5455828aed1a5978ca89281fe5aa43df8e4b82c4d8c2670093290.json  query-d710c2cb781d833905f26401721c5d235b2e05c90d63ff44fda7ffa8de048915.json
migrations/: 20230518000558_inital_schema.sql  20230527201101_add_author.sql
project/: plugins.sbt
src/: config.rs  db.rs  main.rs  statics.rs  types.rs
src/main/resources/: logback.xml
src/main/resources/static/: styles.css
src/main/scala/uk/co/uwcs/go2/: AdminService.scala  Config.scala  Main.scala  RedirectService.scala  RootService.scala
src/main/scala/uk/co/uwcs/go2/auth/: AuthConfigFactory.scala  LoginCallbackService.scala
src/main/twirl/uk/co/uwcs/go2/: panel.scala.html
src/routes/: api.rs  app.rs  auth.rs  mod.rs  redirect.rs
src/routes/app/: mod.rs  templates.rs
static/: home.html  output.css
templates/: app.html  base.html  home.html  panel.html  table.html
