[package]
name = "go2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.28"
rand = "0.8.5"
serde = "1.0.163"
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "offline",
] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "catch-panic"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
