[package]
name = "go2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.18", features = ["headers", "form"] }
axum-sessions = "0.5.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.28"
openidconnect = "3.0.0"
rand = "0.8.5"
serde = "1.0.163"
sqlx = { version = "0.7.0", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
tracing-attributes = "0.1.26"
rust-embed = { version = "8.0.0", features = ["include-exclude"] }
mime_guess = "2.0.4"


[build-dependencies]
which = "4.4.0"
